# matveyivanov

./: .luacheckrc  .pre-commit-config.yaml  Makefile  README.md  package.json
.github/workflows/: action.yml  core-compare.yml  f-locations.yml  linting.yml  publishing-f-locations.yml  publishing.yml  testing.yml  website.yml
.yc/vm/: user-data.yml
docker/: .env.example  Dockerfile  docker-compose.local.yml  docker-compose.main.yml  docker-compose.yc.yml  docker-compose.yml  entrypoint.local.sh  entrypoint.sh
docker/backend/: Dockerfile
f-locations/: .env.example  main.py  requirements.txt
f-locations/lua/hset/: latest.lua
f-locations/src/: config.py  di.py  handle.py  interfaces.py  redis.py  types.py
f-locations/src/validators/: __init__.py  file.py
f-locations/stubs/: ipinfo.pyi
f-locations/validators/: int.py  regex.py  timezone.py
locationsfunc/: main.py
locationsfunc/src/: di.py  handle.py  redis.py
nginx/: nginx.conf
src/: .flake8  main.py  pyproject.toml
src/config/: app.py  di.py  i18n.py  settings.py
src/config/di/: dev.py
src/endpoints/: __init__.py  changelog.py  frontend.py  locations.py  visitors.py
src/lua/hset/: all.lua  clear.lua  size.lua  write_one.lua
src/migrations/: env.py
src/migrations/versions/: 52829df9f858_initial.py  7c203eee0ae5_initial.py
src/models/: book.py  experience.py  project.py  python.py  stack.py
src/schemas/: book.py  changelog.py  experience.py  locations.py  project.py  python.py  stack.py  visitors.py  webhooks.py
src/services/: github.py  interfaces.py  redis.py
src/static/css/: base.css  books.css  changelog.css  error.css  experience.css  home.css  locations.css  projects.css  python.css  stack.css  visitors.css
src/static/js/: changelog.js  locations.js  python.js  stack.js  visitors.js
src/templates/: base.html  books.html  changelog.html  error.html  experience.html  home.html  locations.html  projects.html  python.html  stack.html  visitors.html
src/utils/: contexts.py  exceptions.py  logging.py  middleware.py  routing.py  schemas.py  shortcuts.py  templates.py  time.py  uri.py
src/validators/: __init__.py  file.py  int.py  interfaces.py
